--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -247,7 +247,11 @@
                 </div>
                 <div class="col-md-6 mp">
                     <div class="chart-container">
-                        <img width="100%" src="{% static 'img/river.jpg' %}"/>
+                        {% if site_image %}
+                            <img width="100%" src="{{ site_image.image.url }}"/>
+                        {% else %}
+                            <img width="100%" src="{% static 'img/river.jpg' %}"/>
+                        {% endif %}
                     </div>
                     <div class="vertical-space"></div>
                     <div class="chart-container">
