Add bug report button on the map view

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -65,6 +65,8 @@
         const isStaff = {% if user.is_superuser or user.is_staff %} true {% else %} false {% endif %};
         const mapDefaultSelectedFilters = '{{ preferences.SiteSetting.map_default_filters | safe}}';
         const spatialFilterLayerStyle = '{{ preferences.SiteSetting.spatial_filter_layer_style }}';
+        const reportUrl = '{% url "bug-report" %}';
+        const githubRepo = '{{ preferences.SiteSetting.github_feedback_repo }}';
     </script>
     {% block extra_head %}
 
