--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -1649,6 +1649,113 @@ div:hover::-webkit-scrollbar {
     width: 140px;
 }
 
+.bug-report-wrapper {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin-bottom: 200px;
+    z-index: 99999;
+}
+
+.brp-title {
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(219, 175, 0, 0.7);
+    color: white;
+}
+
+.bug-report-panel {
+    margin-right: 15px;
+    margin-bottom: 10px;
+    background-color: white;
+    width: 275px;
+    -webkit-box-shadow: 0px 0px 3px 1px rgba(153,153,153,0.53);
+    -moz-box-shadow: 0px 0px 3px 1px rgba(153,153,153,0.53);
+    box-shadow: 0px 0px 3px 1px rgba(153,153,153,0.53);
+    display: none;
+}
+
+.brp-type, .brp-summary, .brp-description {
+    padding: 10px;
+}
+
+.brp-summary {
+    border-top: 1px solid rgba(219, 175, 0, 0.3);
+    margin-bottom: -18px;
+    #border-bottom: 1px solid #1b900d;
+}
+
+.brp-description {
+    border-top: 1px solid rgba(219, 175, 0, 0.3);
+}
+
+.bug-report-panel textarea {
+    resize: none !important;
+    border: none;
+    font-size: 11pt !important;
+}
+
+.bug-report-panel textarea:focus, .bug-report-panel input:focus{
+    border-color: inherit;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.bug-report-button {
+    border-radius: 50%;
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-right: 10px;
+    background-color: rgba(219, 175, 0, 0.7);
+    font-size: 18pt;
+    color: white;
+    box-shadow: 2px 2px rgba(128, 128, 128, 0.54);
+    width: 47px;
+    float: right;
+    margin-bottom: 5px;
+}
+
+.bug-report-button:hover {
+    cursor: pointer;
+    background-color: rgba(204, 163, 3, 0.7);
+}
+
+.brp-small-text {
+    font-size: 9pt;
+    padding: 10px;
+    margin-top: -15px;
+    border-top: 1px solid rgba(219, 175, 0, 0.3);
+}
+
+.brp-submit {
+    height: 42px;
+}
+
+#submit-report-button {
+    border-radius: 0 !important;
+    font-size: 10pt;
+    float: right;
+    margin-right: 10px;
+}
+
+.close-brp-panel {
+    float: right;
+}
+
+.close-brp-panel:hover {
+    cursor: pointer;
+    color: #ededed;
+}
+
+.brp-loading-panel {
+    border-top: 1px solid rgba(219, 175, 0, 0.3);
+    text-align: center;
+    margin-bottom: 40px;
+    padding-top: 15px;
+}
+
 .bio-legend-container {
     height: 100%;
     width: 100%;
