--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -247,7 +247,47 @@
                 </div>
                 <div class="col-md-6 mp">
                     <div class="chart-container">
-                        <img width="100%" src="{% static 'img/river.jpg' %}"/>
+                        {% if site_image %}
+                            <div id="siteImageCarousel" class="carousel slide" data-ride="carousel">
+                                <!-- Indicators -->
+                                <ol class="carousel-indicators">
+                                    {% for image in site_image %}
+                                        {% if forloop.counter0 == 0 %}
+                                            <li data-target="#siteImageCarousel" data-slide-to="{{ forloop.counter0 }}" class="active"></li>
+                                        {% else %}
+                                            <li data-target="#siteImageCarousel" data-slide-to="{{ forloop.counter0 }}"></li>
+                                        {% endif %}
+                                    {% endfor %}
+                                </ol>
+
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner">
+                                    {% for image in site_image %}
+                                        {% if forloop.counter0 == 0 %}
+                                            <div class="carousel-item active">
+                                                <img class="d-block w-100" src="{{ image.image.url }}" style="width:100%;">
+                                            </div>
+                                        {% else %}
+                                            <div class="carousel-item">
+                                                <img class="d-block w-100" src="{{ image.image.url }}" style="width:100%;">
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+
+                                <!-- Left and right controls -->
+                                <a class="carousel-control-prev" href="#siteImageCarousel" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#siteImageCarousel" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                              </div>
+                        {% else %}
+                            <img width="100%" src="{% static 'img/river.jpg' %}"/>
+                        {% endif %}
                     </div>
                     <div class="vertical-space"></div>
                     <div class="chart-container">
