--- a/bims/static/css/bug_report_panel_style.css
+++ b/bims/static/css/bug_report_panel_style.css
@@ -1,5 +1,5 @@
 
-#bug-report-wrapper {
+#bug-report-wrapper, .bug-report-wrapper {
     position: fixed;
     right: 0;
     bottom: 0;
@@ -53,16 +53,15 @@
 
 .bug-report-button {
     border-radius: 50%;
-    padding-right: 12px;
-    padding-left: 12px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 6px;
     margin-right: 10px;
     background-color: rgba(219, 175, 0, 0.7);
     font-size: 18pt;
     color: white;
     box-shadow: 2px 2px rgba(128, 128, 128, 0.54);
-    width: 47px;
+    width: 50px;
+    height: 47px;
+    text-align: center;
     float: right;
     margin-bottom: 5px;
 }
