--- a/bims/templates/non_validated_user_list.html
+++ b/bims/templates/non_validated_user_list.html
@@ -54,7 +54,7 @@
                 {% else %}
                     <td><a>{{ obj.original_species_name }}</a></td>
                 {% endif %}
-                <td>{% if obj.category == 'indigenous' %}Native{% else %}Non-Native{% endif %}</td>
+                <td>{% if obj.category == 'indigenous' %}Native{% elif obj.category == 'alien' %}Non-Native{% else %}-{% endif %}</td>
                 <td>{{ obj.collection_date }}</td>
                 <td>{{ obj.owner }}</td>
                 <td class="edit-action"><a href="{% url 'update-records' obj.pk %}" class="btn btn-default" data-toggle="tooltip" title="Edit this object"><i class="fa fa-pencil"></i></a></td>
