--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -218,7 +218,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <a href="#" type="button" class="btn btn-info" id="existing-site-button">Use the existing site</a>
+                    <button type="button" class="btn btn-info" id="existing-site-button">Use the existing site</button>
                 </div>
             </div>
         </div>
