--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -33,6 +33,7 @@
 
     <script src="{% static 'js/non_requirejs/cookies.js' %}"></script>
     <script src="{% static 'js/non_requirejs/site_notice.js' %}"></script>
+    <script src="{% static 'js/utils/font_awesome_icons.js' %}"></script>
     {% block head %} {% endblock %}
 
 </head>
