--- a/bims/templates/collections_form_page.html
+++ b/bims/templates/collections_form_page.html
@@ -406,7 +406,7 @@
                                        value="" placeholder="Taxon name" style="height: 100%;">
                             </div>
                             <div class="col-2">
-                                <button type="button" id="add-taxon-button"
+                                <button type="button" id="find-taxon-button"
                                         class="btn btn-info" style="width: 100%;"> Find
                                 </button>
                             </div>
@@ -485,6 +485,7 @@
     <script src="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.js" %}"></script>
     <script src="{% static "js/libs/openlayers-4.6.4/ol.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script src="{% static 'js/utils/effect.js' %}"></script>
     <script src="{% static "js/non_requirejs/collection_form.js" %}"></script>
 
 {% endblock %}
